[package]
name = "unicode-ccc"
version = "0.1.2"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
description = "Unicode Canonical Combining Class detection"
documentation = "https://docs.rs/unicode-ccc/"
keywords = ["unicode"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/RazrFalcon/unicode-ccc"
edition = "2018"
